--- a/yaml/app-secret-env-2.yaml
+++ b/yaml/app-secret-env-2.yaml
@@ -78,4 +78,12 @@ status:
   readyReplicas: 5
   replicas: 5
   updatedReplicas: 5
-
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: my-secret
+  namespace: default
+type: Opaque
+data:
+  my-secret-key: <base64-encoded-secret>
